// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`An ETextArea looks like a textarea: mountAsInControls 1`] = `
<div data-app>
     <div class="e-form-container"
          rows="3"
          auto-grow
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <div class="editor"
                                   rows="3"
                                   auto-grow
                                   id>
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea looks like a textarea: multiline 1`] = `
<div data-app>
     <div class="e-form-container"
          multi-line
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <div class="editor"
                                   multi-line
                                   id>
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea looks like a textarea: notext 1`] = `
<div data-app>
     <div class="e-form-container">
          <div class="v-input v-input--hide-details theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <div class="editor"
                                   id>
                                   <div class="editor__content"></div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;

exports[`An ETextArea looks like a textarea: withtext 1`] = `
<div data-app>
     <div class="e-form-container"
          value="
    Here comes a text
    with new lines
    and new lines with 
 in them
    and tags <i>a</i>
    ">
          <div class="v-input v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--single-line v-text-field--filled v-text-field--enclosed">
               <div class="v-input__control">
                    <div class="v-input__slot">
                         <div class="v-text-field__slot">
                              <div class="editor"
                                   id>
                                   <div class="editor__content">
                                        <div contenteditable="true"
                                             tabindex="0"
                                             class="ProseMirror">
                                             <p class>Here comes a text with new lines and new lines with in them and tags a</p>
                                        </div>
                                   </div>
                              </div>
                         </div>
                    </div>
               </div>
          </div>
     </div>
</div>
`;
